--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -10,8 +10,27 @@ window.close();
 } 
 </script>
 
-	
-	
+<style type="text/css">
+	.mainset{color:black;text-align:center;float:left;width:100%}
+	.wrapper_main {background:chartreuse;width:90%;margin-left: 10px;}
+	.frame1 {color:black;text-align:left;float:left;width:50%;margin-bottom: 5px;}
+	.frame1_u {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:60%;margin: 20px;}
+	.frame2{color:black;text-align:left;float:left;width:49%;position:relative;left:5px;margin-bottom: 5px;}
+	.frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:51%;position:relative;}
+	.frame4 {color:black;text-align:center;background:rgb(235, 142, 89);float:left;width:49%;position:relative;left:5px;}
+	.frame5{color:black;text-align:center;background:rgb(168, 168, 168);float:right;width:40%}
+	.head1{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(114, 159, 243);width:85%}
+	.head1_u{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(255, 221, 169);width:100%}
+	.head2_u{color:black;text-align:center;float:left;font-size: 60%;border: .4px solid rgb(0, 0, 0);background: rgb(184, 167, 142);width:25%}
+	.body1_u{color:black;text-align:left;float: left;border: 1px solid rgb(0, 0, 0);width:25%}
+	.head2{color:black;text-align:center;float:left;font-size: 60%;border: .4px solid rgb(222, 231, 95);background: rgb(184, 167, 142);width:65%}
+	.body1{color:black;text-align:left;float: left;border: 1px solid rgb(0, 0, 0);width:85%}
+	.body2{color:black;text-align:left;float: left;border: 1px solid rgb(0, 0, 0);width:65%}
+	.body3{color:black;text-align:center;background:rgb(199, 187, 166);float:left;width:33%;border: .4px solid rgb(0, 0, 0)}
+	.body3h{color:black;text-align:center;background:rgb(187, 186, 184);float:left;width:33%;border: .4px solid rgb(0, 0, 0)}
+	.body3t{color:black;text-align:center;background:rgb(187, 186, 184);float:left;font-size:medium;width:99%;border: .4px solid rgb(0, 0, 0)}
+</style>
+
 </head>
 <!-- ******   Load Scripts for graphs  ****** -->
 	<!-- <script type="text/javascript" src="https://www.google.com/jsapi"></script> -->
@@ -19,19 +38,13 @@ window.close();
 	<script type="text/javascript" src="/static/style_1/loader.js"></script>
 
 
-	<script type="text/javascript">
-
-
+<script type="text/javascript">
 <!-- **************************************** -->
-
-
 google.load('visualization', '1', {
     packages: ['corechart', 'line']
 });
 google.setOnLoadCallback(drawCurveTypes);
-
 function drawCurveTypes() {
-
 	var obj = [
 			{% for item in GList %}
             [new Date({{item.0}}*1000),{{item.1}},{{item.2}},{{item.3}}],
@@ -45,9 +58,8 @@ function drawCurveTypes() {
 	data.addColumn('number', '85% Target');
 	data.addRows(obj)
 
- 
     var options = {
-		title: "Trilobe Current Shift Chart",
+		title: "10R80 Current Shift Chart",
 		chartArea: {
 			backgroundColor: {
 				stroke: '#4322c0',
@@ -72,12 +84,62 @@ function drawCurveTypes() {
             }
         }
     };
-
     var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
     chart.draw(data, options);
 }
     </script>	
-    
+
+
+<script type="text/javascript">
+	<!-- **************************************** -->
+	google.load('visualization', '1', {
+		packages: ['corechart', 'line']
+	});
+	google.setOnLoadCallback(drawCurveTypes);
+	function drawCurveTypes() {
+		var obj = [
+				{% for item in GList1 %}
+				[new Date({{item.0}}*1000),{{item.1}},{{item.2}},{{item.3}}],
+				{% endfor %}
+			];
+	
+		var data = new google.visualization.DataTable();
+		data.addColumn('datetime', 'Date');
+		data.addColumn('number', 'Production');
+		data.addColumn('number', 'Target');
+		data.addColumn('number', '85% Target');
+		data.addRows(obj)
+	
+		var options = {
+			title: "Trilobe Current Shift Chart",
+			chartArea: {
+				backgroundColor: {
+					stroke: '#4322c0',
+					strokeWidth: 3
+				}
+			},
+			//backgroundColor: '#F5EBE1',
+			hAxis: {
+				title: 'Time',
+				format: "HH:mm",
+				gridlines: { count: 20 }
+				
+			},
+			
+			vAxis: {
+				title: 'Quantity',
+				gridlines: { count: 15 }
+			},
+			series: {
+				1: {
+					curveType: 'function'
+				}
+			}
+		};
+		var chart = new google.visualization.LineChart(document.getElementById('chart2_div'));
+		chart.draw(data, options);
+	}
+		</script>
 <!-- Begin HTML of Graph  -->
 
 
@@ -85,11 +147,16 @@ function drawCurveTypes() {
 
 <!-- <br><br>
 <input type="button" value="Close this window" onclick="windowClose();"> -->
-<meta http-equiv="refresh" content="30; url={{request.session.local_toggle}}/track_10r" />
-<font size="6"><b><u>Live Tracking</u></b></font>
+<meta http-equiv="refresh" content="30; url={{request.session.local_toggle}}/tracking" />
+
+<div class="wrapper_main">
+<div class="head1_u">
+	<font size="6"><b><u>Live Tracking</u></b></font>
+</div>
+<div class="frame1">  
 
 <br> 
-<div id="chart_div" style="width: 50%; height: 400px; "></div>
+<div id="chart_div" style="width: 100%; height: 400px; "></div>
 <br>
 
 
@@ -200,7 +267,129 @@ End of Shift Projection : {{request.session.projection}}
 {{request.session.count9}}
 <br><br>
 
+</div>
 
+
+<div class="frame2">  
+
+
+	<br> 
+	<div id="chart2_div" style="width: 100%; height: 400px; "></div>
+	<br>
+	
+	
+	
+	<br><br>
+	
+	Current Shift Count: <b>{{request.session.counta}}</b> 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.wd}} 
+	{{request.session.m}}
+	{{request.session.day}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift}} Shift
+	
+	<br><br>
+	Current Shift OA : {{request.session.oaa}}%
+	<br><br>
+	Current shift target: {{request.session.targeta}}
+	<br><br>
+	
+	
+	End of Shift Projection : {{request.session.projectiona}}
+	<br><br>
+	<b><u>Previous Shifts</u></b>
+	<br><br>
+	{{request.session.wd1}} 
+	{{request.session.m1}}
+	{{request.session.day1}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift1}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count1a}}
+	<br><br>
+	
+	{{request.session.wd2}} 
+	{{request.session.m2}}
+	{{request.session.day2}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift2}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count2a}}
+	
+	<br><br>
+	{{request.session.wd3}} 
+	{{request.session.m3}}
+	{{request.session.day3}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift3}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count3a}}
+	<br><br>
+	{{request.session.wd4}} 
+	{{request.session.m4}}
+	{{request.session.day4}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift4}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count4a}}
+	<br><br>
+	{{request.session.wd5}} 
+	{{request.session.m5}}
+	{{request.session.day5}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift5}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count5a}}
+	<br><br>
+	{{request.session.wd6}} 
+	{{request.session.m6}}
+	{{request.session.day6}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift6}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count6a}}
+	<br><br>
+	{{request.session.wd7}} 
+	{{request.session.m7}}
+	{{request.session.day7}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift7}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count7a}}
+	<br><br>
+	{{request.session.wd8}} 
+	{{request.session.m8}}
+	{{request.session.day8}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift8}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count8a}}
+	<br><br>
+	{{request.session.wd9}} 
+	{{request.session.m9}}
+	{{request.session.day9}},
+	2020 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.shift9}} Shift
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	{{request.session.count9a}}
+	<br><br>
+	
+	</div>
+
+
+
+</div>
 
 
 <br><br>
