--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -100,10 +100,12 @@
 	<style type="text/css">
 		.mainset{color:black;text-align:center;float:left;width:100%}
 		.wrapper_main {background:chartreuse;width:90%;margin-left: 10px;}
-		.frame1 {color:black;text-align:center;float:left;width:33%;margin-bottom: 5px;}
-		.frame1_u {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:60%;margin: 20px;}
-		.frame2{color:black;text-align:center;background:rgb(83, 134, 202);float:left;width:49%;position:relative;left:5px;margin-bottom: 5px;}
-		.frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:51%;position:relative;}
+		
+		.frame1 {color:black;text-align:center;float:left;width:32%;margin-bottom: 5px;}
+		.frame2{color:black;text-align:center;background:rgb(83, 134, 202);float:left;width:32%;position:relative;left:5px;margin-bottom: 5px;}
+
+		.frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:32%;position:relative;left:5px;margin-bottom: 5px;}
+
 		.frame4 {color:black;text-align:center;background:rgb(235, 142, 89);float:left;width:49%;position:relative;left:5px;}
 		.frame5{color:black;text-align:center;background:rgb(168, 168, 168);float:right;width:40%}
 		.head1{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(114, 159, 243);width:85%}
@@ -132,7 +134,6 @@
 	#prod24 tr:nth-child(even){background-color: #f8e996;}
 	#prod24 tr:nth-child(odd){background-color: #e2cc4e;}
 	#prod24 tr:hover {background-color: #ddd;}
-	
 	#prod24 th {
 		padding-top: 12px;
 		padding-bottom: 12px;
@@ -153,20 +154,39 @@
 		border: 1px solid rgb(136, 134, 134);
 		padding: 8px;
 	}
-	#prodwk tr:nth-child(even){background-color: #f8e996;}
-	#prodwk tr:nth-child(odd){background-color: #e2cc4e;}
+	#prodwk tr:nth-child(even){background-color: #f8ce96;}
+	#prodwk tr:nth-child(odd){background-color: #e29d4e;}
 	#prodwk tr:hover {background-color: #ddd;}
-	
 	#prodwk th {
 		padding-top: 12px;
 		padding-bottom: 12px;
 		text-align: left;
-		background-color: rgb(139, 128, 107);
+		background-color: rgb(139, 117, 107);
 		color: white;
 	}
 	</style>
 
-
+<style>
+	#prodpast {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 100%;
+	}
+	#prodpast td, #prod24 th {
+		border: 1px solid rgb(136, 134, 134);
+		padding: 8px;
+	}
+	#prodpast tr:nth-child(even){background-color: #f8ad96;}
+	#prodpast tr:nth-child(odd){background-color: #e27d4e;}
+	#prodpast tr:hover {background-color: #ddd;}
+	#prodpast th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: rgb(139, 107, 107);
+		color: white;
+	}
+	</style>
 </head>
 {% block grid %}
 {% endblock %}
@@ -262,14 +282,13 @@
 				{% block frame1 %}
 				<table id="prod24">
 					<tr>
-						<th colspan="5"><center><font style="font-weight:bolder;font-size:x-large;">24HR Production (7am - 7am)</font></center></th>
+						<th colspan="5"><center><font style="font-weight:bolder;font-size:x-large;">{{request.session.data3title}}</font></center></th>
 					</tr>
 					<tr>
 						<th><center>Part</center></th>
 						<th><center>Finished</center></th>
 						<th colspan="3"><center>Operations</center></th>
 
-					
 					{% for i in request.session.data3 %}
 					
 						{% if i.2 = 1 %}
@@ -287,21 +306,69 @@
 					</tr>
 				</table>
 				{% endblock %}
-			
 			</div>
-			<div class="frame2">  <!-- Default is L24hr scrap -->
-				{% block frame2 %}
-				{% endblock %}
+
+
+			<div class="frame2">  <!-- Week Production-->
+				<table id="prodwk">
+					<tr>
+						<th colspan="5"><center><font style="font-weight:bolder;font-size:x-large;">{{request.session.data2title}}</font></center></th>
+					</tr>
+					<tr>
+						<th><center>Part</center></th>
+						<th><center>Finished</center></th>
+						<th colspan="3"><center>Operations</center></th>
+
+					{% for i in request.session.data2 %}
+					
+						{% if i.2 = 1 %}
+							</tr><tr>
+							<td><b>{{i.0}}</b></td>
+							<td><u>{{i.3}}</u><br><center>{{i.1}}</center></td>
+						{% else %}
+							{% if i.1 = 0 %}
+								<td>&nbsp;&nbsp;&nbsp;</td>
+							{% else %}
+								<td><u>{{i.3}}</u><br><center>{{i.1}}</center></td>
+							{% endif %}
+						{% endif %}
+					{% endfor %}
+					</tr>
+				</table>
+
 			</div>
-			<div class="frame3">  <!-- Default is OA -->
-				{% block frame3 %}
-				{% endblock %}
+
+			<div class="frame3">  <!-- Week Production-->
+				<table id="prodpast">
+					<tr>
+						<th colspan="5"><center><font style="font-weight:bolder;font-size:x-large;">{{request.session.data1title}}</font></center></th>
+					</tr>
+					<tr>
+						<th><center>Part</center></th>
+						<th><center>Finished</center></th>
+						<th colspan="3"><center>Operations</center></th>
+
+					{% for i in request.session.data1 %}
+					
+						{% if i.2 = 1 %}
+							</tr><tr>
+							<td><b>{{i.0}}</b></td>
+							<td><u>{{i.3}}</u><br><center>{{i.1}}</center></td>
+						{% else %}
+							{% if i.1 = 0 %}
+								<td>&nbsp;&nbsp;&nbsp;</td>
+							{% else %}
+								<td><u>{{i.3}}</u><br><center>{{i.1}}</center></td>
+							{% endif %}
+						{% endif %}
+					{% endfor %}
+					</tr>
+				</table>
+
 			</div>
-			<div class="frame4">  <!-- Default is Manpower -->
-				{% block frame4 %}
-				{% endblock %}
-			</div>
-		</div>
+
+
+
 
     {% endif %}
 
