--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -104,7 +104,7 @@
 		.frame1 {color:black;text-align:center;float:left;width:32%;margin-bottom: 5px;}
 		.frame2{color:black;text-align:center;background:rgb(83, 134, 202);float:left;width:32%;position:relative;left:5px;margin-bottom: 5px;}
 
-		.frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:32%;position:relative;left:5px;margin-bottom: 5px;}
+		.frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:32%;position:relative;left:10px;margin-bottom: 5px;}
 
 		.frame4 {color:black;text-align:center;background:rgb(235, 142, 89);float:left;width:49%;position:relative;left:5px;}
 		.frame5{color:black;text-align:center;background:rgb(168, 168, 168);float:right;width:40%}
@@ -150,7 +150,7 @@
 		border-collapse: collapse;
 		width: 100%;
 	}
-	#prodwk td, #prod24 th {
+	#prodwk td, #prodwk th {
 		border: 1px solid rgb(136, 134, 134);
 		padding: 8px;
 	}
@@ -172,7 +172,7 @@
 		border-collapse: collapse;
 		width: 100%;
 	}
-	#prodpast td, #prod24 th {
+	#prodpast td, #prodpast th {
 		border: 1px solid rgb(136, 134, 134);
 		padding: 8px;
 	}
