--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -32,19 +32,19 @@
 										<ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
 											<li><a href="{{request.session.local_toggle}}/scrap_display_24hr">Last 24hrs</a></li>
 											<li><a href="{{request.session.local_toggle}}/scrap_display_date_pick">Interval</a></li>
-											<li><a href="{{request.session.local_toggle}}/pie_chart">EPV Report</a></li>
 
-											<!-- <li class="dropdown-submenu">
-												<a href="#" class="dropdown-toggle" data-toggle="dropdown">TPM / EPV</a>
+
+											<li class="dropdown-submenu">
+												<a href="#" class="dropdown-toggle" data-toggle="dropdown">EPV Reports</a>
 												<ul class="dropdown-menu" style="background-color:#d3ded4;">
 													<li class="dropdown-submenu">
-														<li><a href="#">TMP Report</a></li>
-														<li><a href="{{request.session.local_toggle}}/pie_chart">EPV Report</a></li>
-														<li><a href="{{request.session.local_toggle}}/tpm_display">Edit TPM Assets</a></li>
-														<li><a href="{{request.session.local_toggle}}/tpm_assets">Edit EPVs</a></li>
+	
+														<li><a href="{{request.session.local_toggle}}/pie_chart">CNC Tech EPV Report</a></li>
+														<li><a href="{{request.session.local_toggle}}/quality_epv_asset_entry">EPVs By Asset</a></li>
+
 													</li>
 												</ul>
-											</li> -->
+											</li>
 
 										</ul>
 									</li>
