--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -42,13 +42,13 @@
 
 	.frame8 {color:black;text-align:center;float:left;width:60%}
 	.frame9{color:black;text-align:center;float:left;width:35%;position:relative;left:5px;}
-
+	.frame5 {color:black;text-align:center;float:left;width:80%}
 
 	.frame1 {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:40%}
 	.frame2{color:black;text-align:center;background:rgb(253, 186, 186);float:left;width:30%;position:relative;left:5px;}
 	.frame3{color:black;text-align:center;background:rgb(42, 165, 83);float:left;width:25%;position:relative;left:10px;}
 	.frame4{color:black;text-align:center;background:rgb(165, 116, 42);float:left;width:15%}
-	.frame5{color:black;text-align:center;background:rgb(168, 168, 168);float:right;width:40%}
+
 	.head1{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(226, 226, 226);width:100%}
 	.head2{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(255, 253, 241);width:100%}
 	.head3{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);float:left;background:rgb(226, 226, 226);width:80%;height: 30px;}
@@ -60,7 +60,7 @@
 	.body4{color:black;text-align:center;background:rgb(240, 227, 203);float:left;border: .4px solid rgb(0, 0, 0);width:80%}
 	.body3a{color:black;text-align:center;background:rgb(199, 187, 166);float:left;border: .4px solid rgb(0, 0, 0);width:20%}
 	.body4a{color:black;text-align:center;background:rgb(240, 227, 203);float:left;border: .4px solid rgb(0, 0, 0);width:20%}
-	.body5{color:black;text-align:center;background:rgb(199, 187, 166);float:left;border: .4px solid rgb(0, 0, 0);position:relative;width:100%;}
+
 	.body6{color:black;text-align:center;background:rgb(240, 227, 203);float:left;border: .4px solid rgb(0, 0, 0);position:relative;width:100%;}
 
 	#full-screen-background-image {z-index: -999;min-height: 110%; min-width: 100%;width: 100%;height: 110%;position: fixed;top: 0;  left: 0;}
