--- a/trakberry/templates/quality_epv_asset_entry.html
+++ b/trakberry/templates/quality_epv_asset_entry.html
@@ -2,7 +2,7 @@
 <!-- mgmt_display template form.html -->
 {% block content %}
 
-<center style="margin-left:-20%;">
+<center>
 <form action="" method="post">{% csrf_token %}
 <table style="width:40%;margin-left:10%;">
 	<tr><th bgcolor="#eaebdd" colspan="3" style="font-size: 200%;">
