--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -42,7 +42,7 @@
 
 	.frame8 {color:black;text-align:center;float:left;width:60%}
 	.frame9{color:black;text-align:center;float:left;width:35%;position:relative;left:5px;}
-	.frame5 {color:black;text-align:center;float:left;width:80%}
+	.frame5 {color:black;text-align:center;float:center;width:80%}
 
 	.frame1 {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:40%}
 	.frame2{color:black;text-align:center;background:rgb(253, 186, 186);float:left;width:30%;position:relative;left:5px;}
